# copier-webapp-template

./: .gitignore  README.md  copier.yml  pyproject.toml  pytest.ini  ruff.toml
copier/: messages.yml  settings.yml
copier/questions/: essential.yml  package_details.yml
template/: .dockerignore  .editorconfig  .gitignore  README.md.jinja  {{app_name}}.code-workspace.jinja
template/.obsidian/: app.json
template/backend/: README.md.jinja  pyproject.toml.jinja
template/backend/app/: main.py.jinja
template/backend/app/core/: scheduler.py
template/backend/app/routes/: get_random_number.py
template/backend/tests/: conftest.py  test_main.py.jinja
template/docker/: Dockerfile  nginx.conf  supervisord.conf
template/frontend/: .prettierrc  README.md.jinja  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  vite.config.ts
template/frontend/src/: app.css  hooks.server.js
template/frontend/src/lib/components/: clock.svelte  random.svelte
template/frontend/src/routes/: +page.svelte.jinja
template/frontend/static/: 404.html
template/scripts/: build.sh.jinja  uninstall_nodejs.sh
tests/: test_project.py
